<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_clear_recent">删除记录</string>
    <string name="action_comment_page">跳页</string>
    <string name="action_delete_comic">删除漫画</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="agentweb_camera">Camera</string>
    <string name="agentweb_cancel">Cancel</string>
    <string name="agentweb_click_open">Tap to continue</string>
    <string name="agentweb_coming_soon_download">Coming soon to download the file</string>
    <string name="agentweb_current_downloading_progress">Downloading:%s</string>
    <string name="agentweb_download">Download</string>
    <string name="agentweb_download_fail">Download failed!</string>
    <string name="agentweb_download_task_has_been_exist">The task already exists, do not repeat click to download!</string>
    <string name="agentweb_file_chooser">Files</string>
    <string name="agentweb_file_download">Download</string>
    <string name="agentweb_honeycomblow">Wi-Fi disconnected. Continue the download via mobile data network?</string>
    <string name="agentweb_leave">Go away</string>
    <string name="agentweb_leave_app_and_go_other_page">leaving %s and opening another app?</string>
    <string name="agentweb_loading">Loading ...</string>
    <string name="agentweb_max_file_length_limit">The selected file can not be larger than %s MB</string>
    <string name="agentweb_tips">Note</string>
    <string name="agentweb_trickter">You have a new notice</string>
    <string name="alert_account_not_activated">"这个账户还没有被激活！

请前往你注册的邮箱并找寻【哔咔邀请函】（有机会在垃圾邮件中）！

如找不到邀请函邮件，请按下方的重新发送邀请函！"</string>
    <string name="alert_action_ai_script_title">AI 模式</string>
    <string name="alert_action_change_title">更变称号</string>
    <string name="alert_already_exist_email">"这个哔咔账号已经被注册！

如果你忘记了密码，请回上一页按忘记密码！"</string>
    <string name="alert_already_exist_name">"这个匿称已经属于一位绅士
请使用别的匿称！"</string>
    <string name="alert_anonymous_not_match">"找不到交配对象！

请再试一次！"</string>
    <string name="alert_apk_verison_must_update">对不起，你必须更新版本</string>
    <string name="alert_apk_verison_ok">官方下载</string>
    <string name="alert_apk_verison_ok_mirror">镜像下载</string>
    <string name="alert_apk_version_prefix">发现更新－Ver.</string>
    <string name="alert_block_user_content">"是否封锁此用户？
封锁后无法解锁"</string>
    <string name="alert_block_user_positive">封锁</string>
    <string name="alert_block_user_title">封锁用户</string>
    <string name="alert_bookmark_canceled">已取消收藏</string>
    <string name="alert_bookmarked">已收藏</string>
    <string name="alert_button_do_not_show_again">不再显示</string>
    <string name="alert_cannot_start_with_pica">哔咔是注册商标，不能用的。</string>
    <string name="alert_chat_rule">"▲只谈风月，不谈政事

 ▲相互尊重，善意推定

 ▲没有什么是理所当然的

 ▲请爱惜哔咔，珍惜眼前

 以上四条为总纲


"</string>
    <string name="alert_chat_rule_title">【哔咔聊天测试板板规】</string>
    <string name="alert_chatroom_is_not_ready">"欸...!?

哔咔聊天室还未正式开放的样子...
请等待下一个版本吧..."</string>
    <string name="alert_chatroom_leave_msg">"呜呜呜...
呜呜...呜...

你真的要离开聊天室吗？

呜......"</string>
    <string name="alert_chatroom_leave_title">从聊天室逃走</string>
    <string name="alert_clear_all_recent_message">"你是否删除所有观看记录，包括最后观看话数及页数？

确定以后就无法复原的喔！"</string>
    <string name="alert_clear_all_recent_success">已删除所有记录！</string>
    <string name="alert_clear_all_recent_title">删除所有观看记录</string>
    <string name="alert_clear_recent_message">"你是否删除观看记录，包括最后观看话数及页数？

确定以后就无法复原的喔！"</string>
    <string name="alert_clear_recent_success">已删除记录！</string>
    <string name="alert_clear_recent_title">删除观看记录</string>
    <string name="alert_continue_download_comic">你是否需要继续下载还没有完成下载的漫画？</string>
    <string name="alert_continue_download_comic_title">继续下载漫画</string>
    <string name="alert_copied">已成功复制！</string>
    <string name="alert_delete_downloaded_comic">"你确定要删除这本漫画吗？

删除内容包括所有已下载的图片及数据。"</string>
    <string name="alert_delete_downloaded_comic_title">删除漫画</string>
    <string name="alert_dialog_select_title">请选择</string>
    <string name="alert_download_not_allow">此本子已暂停下载功能</string>
    <string name="alert_download_not_allow_title">无法下载</string>
    <string name="alert_download_not_ready">下载功能还没弄好的样子...？请先在在线看吧</string>
    <string name="alert_edit_page_is_not_ready">"嘛...

小绅绅的头像是可以修改的，但其他数据还未不开。

看来要等待下一个版本吧..."</string>
    <string name="alert_edit_profile_question_error">请填写好所有「忘记密码」用的问题及答案！</string>
    <string name="alert_empty_comment">伟论再怎么少也要有1个字以上才对喵？</string>
    <string name="alert_empty_email">请填写好哔咔账号！</string>
    <string name="alert_empty_name">请填写好匿称 (2-50字)！</string>
    <string name="alert_empty_password">请填写好密码（8字以上！）</string>
    <string name="alert_fake_email">"哔咔娘认定你的是假冒电邮！！

请确认你的电邮地址可以收到邀请函邮件，你还有不多于十次的机会！"</string>
    <string name="alert_forgot_password_success">一封密函已送往你的电邮地址，请跟随指示重设密码！</string>
    <string name="alert_general_error">"哔咔哔咔被玩坏了!

这肯定不是哔咔的问题！
绝对不是！"</string>
    <string name="alert_gift_not_ready">嘛...礼包功能还没弄好的样子...？请直接找骑士问问吧！</string>
    <string name="alert_hide_comment">"你确定要把这个留言隐藏吗？

留言一但被隐藏就无法复原的喔！！！！

"</string>
    <string name="alert_hide_comment_title">【留言隐藏警告】</string>
    <string name="alert_invalid_email_or_password">你输入的帐户数据并不正确哦，请重新输入！</string>
    <string name="alert_leave">"呜呜呜...
呜呜...呜...

你真的要离开我吗？

呜......"</string>
    <string name="alert_level_not_high_enough_to_comment">"小绅绅的等级不够或者没有认证账户！

认证了的帐户等级2才能留言唷～

你可以打哔卡和更换头像升等级的～"</string>
    <string name="alert_level_up">"升级了！

小绅绅又长大了！"</string>
    <string name="alert_like_canceled">已取消赞好</string>
    <string name="alert_liked">已赞好</string>
    <string name="alert_no_permission">对不起...我无法取得修改亮度权限...</string>
    <string name="alert_not_chosen_birthday">"还没有选择出生日期唷！

生日当天会有福利给你，给我好好的选啊！"</string>
    <string name="alert_not_enough_18">听说...你还没有成年...？你懂的...</string>
    <string name="alert_not_found">"欸...!?

404 找不到"</string>
    <string name="alert_not_same_password">密码和确认密码不同！</string>
    <string name="alert_not_support_email">"我们不支授此邮箱...

QQ和163电邮君不想跟我们做朋友，所以请你用其他电邮服务商吧。例如：Gmail, Yahoo 和 Outlook"</string>
    <string name="alert_pica_id_wrong">请填写正确的哔咔账号！</string>
    <string name="alert_pin_password_length">屏蔽密码必须4个数字！</string>
    <string name="alert_post_comment_too_frequent">"作为绅士，发表伟论时必须要注意优雅，不要污...

（你的心中很认同，所以决定多等一会儿再发表其他伟论）"</string>
    <string name="alert_post_reply_too_frequent">再怎么想吐糟，也不能回得太快呢...</string>
    <string name="alert_punch_in_success">你已经成功打哔咔</string>
    <string name="alert_register_success">你已经可以直接登入哔咔！</string>
    <string name="alert_register_success_title">注册完成！</string>
    <string name="alert_register_warning">"你确定这是能接收邮件的电邮地址吗？

如果是假的，你有可能被哔咔娘永久封锁哦！"</string>
    <string name="alert_register_warning_title">封锁警告</string>
    <string name="alert_remove_all_comment_content">是否删除此用户的所有留言？</string>
    <string name="alert_remove_all_comment_positive">删除</string>
    <string name="alert_remove_all_comment_title">删除所有留言</string>
    <string name="alert_report_comment">"你确定要举报这个留言吗？

留言一但举报就无法回收的喔！！！！

"</string>
    <string name="alert_report_comment_title">【举报留言警告】</string>
    <string name="alert_resend_activation_email_not_ready">重新发新激活邮件功能还没弄好的样子...？再找找看垃圾箱或自己想法子吧？</string>
    <string name="alert_resend_activation_success">一封密函已送往你的电邮地址(很大机会在垃圾箱，并可能要等24小时以上才收到)，请跟随指示激活账号！</string>
    <string name="alert_save_image_failed">无法储存图片！（头像是不能储存的）</string>
    <string name="alert_save_image_success">储存图片成功！</string>
    <string name="alert_support_us">"摆脱伸手轮回，从今天起做一个有用的绅士

支持哔咔有多种方法，总有一种适合你！"</string>
    <string name="alert_support_us_title">【爱・哔咔哔咔】</string>
    <string name="alert_time_is_not_synchronize">"你所在的时间线与我们有所不同
请你调整一下再尝试吧！"</string>
    <string name="alert_title">数据错误</string>
    <string name="alert_too_many_requests">"吼！

你的要求太多了！

有问题你直接找团长吧！"</string>
    <string name="alert_under_review">这个本子好像正在审核过程当中..？请待会再来吧！</string>
    <string name="alert_user_not_activated_cannot_comment_or_chat">还没有认证账户的小绅绅不能留言或在聊天室发言哦！</string>
    <string name="alert_using_mobile_network">"请注意！！

你正在使用数据喔！！

"</string>
    <string name="alert_validation">"欸...!?

为什么呢？
认证好像有点问题...

再试试看吧"</string>
    <string name="alert_version_not_supported">你的系统版本不支持此功能......</string>
    <string name="alert_version_not_supported_title">无法设定颜色</string>
    <string name="anonymous_chat_exit_message">"你确定要离开聊天吗？

离开后需要重新交配的。"</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="category_keywords_list_title">绅士都在搜的关键词</string>
    <string name="category_list_title">热门分类</string>
    <string name="category_tag_list_title">绅士都在看的标签</string>
    <string name="change_password_change">@string/setting_password</string>
    <string name="change_password_enter_new_hint">输入新密码</string>
    <string name="change_password_new_confirm_title">确认密码</string>
    <string name="change_password_new_title">新密码</string>
    <string name="change_password_show_password">显示密码</string>
    <string name="leaderboard_tab_popular_24hr">过去 24 小时</string>
    <string name="leaderboard_tab_popular_30days">过去 30 天</string>
    <string name="leaderboard_tab_popular_7days">过去 7 天</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="splash_error">无法连接服务器，请检查你的网络连接是否正常。</string>
    <string name="splash_remark">如果不能连接或不能载图，请尝试分流【 2 】或 分流【 3 】</string>
    <string name="splash_retry">重新连接</string>
    <string name="splash_server_1">分流【 1 】</string>
    <string name="splash_server_2">分流【 2 】</string>
    <string name="splash_server_3">分流【 3 】</string>
</resources>