<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="?custom_background_color_dark" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/activity_splash" android:padding="@dimen/padding_4" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.picacomic.fregata.utils.views.SquareImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/icon_256" style="@style/ImageViewBaseStyleFitCenter" />
        <LinearLayout android:orientation="vertical" android:id="@id/linearLayout_splash_error" android:background="@drawable/card_style_white_bg" android:padding="@dimen/padding_4" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_4">
            <TextView android:textColor="@color/black" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/padding_3" android:text="@string/splash_error" />
            <Button android:id="@id/button_splash_error" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/splash_retry" style="@style/ButtonRoundPink" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/linearLayout_splash_options" android:background="@drawable/card_style_white_bg" android:padding="@dimen/padding_4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_4">
            <Button android:id="@id/button_splash_server1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/splash_server_1" style="@style/ButtonRoundPink" />
            <TextView android:textColor="@color/black" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_3" android:layout_marginBottom="@dimen/padding_3" android:text="@string/splash_remark" />
            <Button android:id="@id/button_splash_server2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/splash_server_2" style="@style/ButtonFilledTonal" />
            <Button android:id="@id/button_splash_server3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_2" android:text="@string/splash_server_3" style="@style/ButtonFilledTonal" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
