<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="?custom_background_color_dark" android:paddingLeft="@dimen/padding_4" android:paddingTop="@dimen/padding_6" android:paddingRight="@dimen/padding_4" android:paddingBottom="@dimen/padding_4" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ProgressBar android:id="@id/login_progress" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" style="?android:progressBarStyleLarge" />
    <ScrollView android:id="@id/login_form" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:id="@id/email_login_form" android:background="@drawable/card_style_white_bg" android:padding="@dimen/padding_5" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <AutoCompleteTextView android:id="@id/email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/prompt_email" android:maxLines="1" android:singleLine="true" android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <EditText android:id="@id/password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/prompt_password" android:maxLines="1" android:singleLine="true" android:inputType="textPassword" android:imeOptions="actionUnspecified|normal" android:imeActionLabel="@string/action_sign_in_short" android:imeActionId="@id/login" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button android:textStyle="bold" android:id="@id/email_sign_in_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_4" android:text="@string/action_sign_in" style="@style/ButtonRoundPink" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
