<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@id/coordinatorLayout" android:background="?custom_background_color_dark" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout android:id="@id/appbar" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="?actionBarSize" app:layout_collapseMode="parallax" app:layout_scrollFlags="enterAlways|scroll" app:popupTheme="@style/ThemeOverlay.AppCompat.Light" style="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:padding="@dimen/padding_2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/padding_2" android:layout_marginTop="@dimen/padding_2" android:text="@string/change_password_new_title" style="@style/TextBaseStyleGrayDarkContent2" />
            <include layout="@layout/layout_separator_full" />
            <LinearLayout android:orientation="vertical" android:background="@drawable/card_style_white_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/padding_2" android:layout_marginRight="@dimen/padding_2">
                <RelativeLayout android:padding="@dimen/padding_4" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <EditText android:gravity="center|left" android:id="@id/editText_change_password_new" android:background="@color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/change_password_enter_new_hint" android:layout_centerVertical="true" android:inputType="textPassword" style="@style/EditTextStandardSingleLineGrayDark" />
                </RelativeLayout>
            </LinearLayout>
            <include layout="@layout/layout_separator_full" />
            <TextView android:padding="@dimen/padding_2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/padding_2" android:layout_marginTop="@dimen/padding_2" android:text="@string/change_password_new_confirm_title" style="@style/TextBaseStyleGrayDarkContent2" />
            <include layout="@layout/layout_separator_full" />
            <LinearLayout android:orientation="vertical" android:background="@drawable/card_style_white_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/padding_2" android:layout_marginRight="@dimen/padding_2">
                <RelativeLayout android:padding="@dimen/padding_4" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <EditText android:gravity="center|left" android:id="@id/editText_change_password_new_confirm" android:background="@color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/change_password_enter_new_hint" android:layout_centerVertical="true" android:inputType="textPassword" style="@style/EditTextStandardSingleLineGrayDark" />
                </RelativeLayout>
            </LinearLayout>
            <include layout="@layout/layout_separator_full" />
            <CheckBox android:id="@id/checkBox_change_password_show_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/padding_2" android:text="@string/change_password_show_password" style="@style/TextBaseStyleGrayContent3" />
            <Button android:id="@id/button_change_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/padding_3" android:text="@string/change_password_change" style="@style/ButtonFilledPrimary" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
