<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@id/coordinatorLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@id/appbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@id/toolbar"
            style="@style/AppTheme.PopupOverlay"
            android:layout_width="fill_parent"
            android:layout_height="?actionBarSize"
            app:layout_scrollFlags="enterAlways|scroll"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.SearchView
                    android:id="@id/searchView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="right" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextBaseStylePinkTitle2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:drawableLeft="@mipmap/register_name"
                android:drawablePadding="@dimen/padding_2"
                android:padding="@dimen/padding_2"
                android:text="@string/category_keywords_list_title"
                android:visibility="visible" />

            <LinearLayout
                android:id="@id/linearLayout_category_keywords_list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:orientation="vertical"
                android:padding="@dimen/padding_2"
                android:visibility="visible" />

            <TextView
                style="@style/TextBaseStylePinkTitle2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:drawableLeft="@mipmap/register_name"
                android:drawablePadding="@dimen/padding_2"
                android:padding="@dimen/padding_2"
                android:text="@string/category_tag_list_title"
                android:visibility="gone" />

            <LinearLayout
                android:id="@id/linearLayout_category_tag_list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:orientation="vertical"
                android:padding="@dimen/padding_2"
                android:visibility="gone" />

            <TextView
                style="@style/TextBaseStylePinkTitle2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundDark"
                android:drawableLeft="@mipmap/register_name"
                android:drawablePadding="@dimen/padding_2"
                android:padding="@dimen/padding_2"
                android:text="@string/category_list_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@id/recyclerView_category"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/backgroundDark"
                android:padding="@dimen/padding_1" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>