<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_category_keywords_title"
            style="@style/TextBaseStylePinkTitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_2"
            android:layout_marginTop="@dimen/padding_2"
            android:layout_marginRight="@dimen/padding_2"
            android:background="@drawable/card_style_white_bg"
            android:drawableLeft="@mipmap/register_name"
            android:drawablePadding="@dimen/padding_2"
            android:padding="@dimen/padding_2"
            android:text="@string/category_keywords_list_title"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/linearLayout_category_keywords_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_2"
            android:layout_marginRight="@dimen/padding_2"
            android:background="@drawable/card_style_white_bg"
            android:orientation="vertical"
            android:padding="@dimen/padding_2"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView_category_tags_title"
            style="@style/TextBaseStylePinkTitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_2"
            android:layout_marginTop="@dimen/padding_2"
            android:layout_marginRight="@dimen/padding_2"
            android:background="@drawable/card_style_white_bg"
            android:drawableLeft="@mipmap/register_name"
            android:drawablePadding="@dimen/padding_2"
            android:padding="@dimen/padding_2"
            android:text="@string/category_tag_list_title"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/linearLayout_category_tag_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_2"
            android:layout_marginRight="@dimen/padding_2"
            android:background="@drawable/card_style_white_bg"
            android:orientation="vertical"
            android:padding="@dimen/padding_2"
            android:visibility="gone" />

        <TextView
            style="@style/TextBaseStylePinkTitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_2"
            android:layout_marginTop="@dimen/padding_2"
            android:layout_marginRight="@dimen/padding_2"
            android:background="@drawable/card_style_white_bg"
            android:drawableLeft="@mipmap/register_name"
            android:drawablePadding="@dimen/padding_2"
            android:padding="@dimen/padding_2"
            android:text="@string/category_list_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_1"
            android:layout_marginRight="@dimen/padding_1"
            android:background="@android:color/transparent"
            android:clipToPadding="false"
            android:paddingLeft="@dimen/padding_1"
            android:paddingTop="@dimen/padding_1"
            android:paddingRight="@dimen/padding_1"
            android:paddingBottom="@dimen/padding_3" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
